--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
+    default-src 'self';
+    img-src 'self' data: https://i.scdn.co https://*.scdn.co;
+    frame-src https://open.spotify.com;
+    connect-src 'self';
+    style-src 'self' 'unsafe-inline';
+    script-src 'self';
+  "
+    />
+
     <title>Pra você 💙</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
