--- a/index.html
+++ b/index.html
@@ -3,17 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="
-    default-src 'self';
-    img-src 'self' data: https://i.scdn.co https://*.scdn.co;
-    frame-src https://open.spotify.com;
-    connect-src 'self';
-    style-src 'self' 'unsafe-inline';
-    script-src 'self';
-  "
-    />
 
     <title>Pra você 💙</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -182,8 +171,10 @@
       .spotify img {
         position: relative;
         inset: 0;
+        object-fit: contain;
         width: 100%;
-        height: 100%;
+        height: 120px;
+        object-position: center;
         object-fit: cover;
       }
       .btn {
@@ -316,9 +307,6 @@
                 arrepiante e seu carinho é lindo 💕 Que sorte a minha te
                 conhecer !!!
               </p>
-              <div class="spotify">
-                <img src="card1.jpg" alt="Código Spotify 2" />
-              </div>
               <iframe
                 data-testid="embed-iframe"
                 style="border-radius: 12px"
@@ -347,9 +335,6 @@
                 cor num fim de tarde numa praia linda. Foi uma emoção gigante e
                 o melhor de tudo era que estava ali com voce 🌅 <!DOCTYPE html>
               </p>
-              <div class="spotify">
-                <img src="card2.jpg" alt="Código Spotify 2" />
-              </div>
 
               <iframe
                 data-testid="embed-iframe"
@@ -379,9 +364,6 @@
                 lá. Mas você também dominou meu presente, você é aquela parte em
                 mim que acredita em amores de uma vida inteira. 🧑🏽‍🤝‍🧑🏻💍💕
               </p>
-              <div class="spotify">
-                <img src="card3.jpg" alt="Código Spotify 3" />
-              </div>
               <iframe
                 data-testid="embed-iframe"
                 style="border-radius: 12px"
@@ -412,13 +394,6 @@
                 que é a pessoa certa. Obrigado por transformar essa data em algo
                 ainda mais especial.
               </p>
-              <div class="spotify" style="background-color: transparent">
-                <img
-                  src="niver.jpg"
-                  style="object-fit: contain"
-                  alt="Código Spotify 4"
-                />
-              </div>
               <iframe
                 data-testid="embed-iframe"
                 style="border-radius: 12px"
@@ -449,9 +424,6 @@
                 olhinhos fofos, só sei que eu quero milhares de quilômetros de
                 histórias com você.
               </p>
-              <div class="spotify">
-                <img src="card4.jpg" alt="Código Spotify 5" />
-              </div>
               <iframe
                 data-testid="embed-iframe"
                 style="border-radius: 12px"
